As a registrered user I can log in and log out [Delivers #175250032]
