# validation.js
@@ -19,3 +19,16 @@ exports.registerValidation = (data) => {
     });
     return schema.validate(data);
 };
+
+exports.loginValidation = (data) => {
+    const schema = Joi.object({
+        email: Joi.string()
+            .min(6)
+            .required()
+            .email(),
+        password: Joi.string()
+            .min(6)
+            .required()
+    });
+    return schema.validate(data);
+};
